--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,3 +22,5 @@ services:
     container_name: project_name-postgres
     environment: 
       POSTGRES_PASSWORD: postgres
+    ports:
+      - 5432:5432
