--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.7.2
 backports.zoneinfo==0.2.1
 dj-database-url==2.0.0
 Django==4.0.4
+django-jazzmin==2.6.0
 gunicorn==20.0.4
 psycopg2==2.9.3
 sqlparse==0.4.4
