--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ EMAIL_HOST='sandbox.smtp.mailtrap.io'
 EMAIL_HOST_USER='7b3153b23d54fb'
 EMAIL_HOST_PASSWORD='a0f4d2ce11b912'
 EMAIL_PORT='2525'
+API_FIREBASE_KEY=AAAA3l2kCUw:APA91bHKbXFcUvcF5FMIdArDwIKscED98MJuAv7hYfz86nk88mEH7xznu_jrVHhsmv4ZxjJbZszOHqzXY-8Qo6o4Veprn3-gAxLAzLyUB1kxd-lo6KKxQbKPUxyi1v9LyU6oMSlWVtUq
